# Paralelismo-de-Strong-Connectivity-Basada-en-Faster-Reachability-

./: .gitignore  CMakeLists.txt  README.md  dashboard.html  run_all.sh
config/: benchmark.json  datasets.json  parameters.json
datasets/synthetic/: graph_10k.txt  graph_1k.txt  lattice_10k.txt
docs/: architecture.md  experimentacion.md  experimental_results.md  implementation_details.md  limitations.md  methodology.md  paper_summary.md  reproducibility.md
results/csv/: benchmarks.csv  benchmarks_dual.csv  breakdown.csv  breakdown_dual.csv  hashbag_vs_vector.csv  scalability.csv  tau_analysis.csv
results/reports/: analisis_experimental.md
scripts/: download_datasets.sh  generate_dashboard_data.py  generate_plots.py  run_benchmarks.sh  setup_env.sh
src/: generate_datasets.cpp  main.cpp
src/benchmark/: benchmark.hpp  metrics.cpp  metrics.hpp
src/graph/: graph.cpp  graph.hpp
src/scc/: ap_bgss.cpp  ap_bgss.hpp  bgss.cpp  bgss.hpp  hashbag.cpp  hashbag.hpp  multi_bgss.cpp  multi_bgss.hpp  tarjan.cpp  tarjan.hpp  vgc.cpp  vgc.hpp
tests/: test_correctness.cpp
